--- a/gb/24/6/24/n14275926.md
+++ b/gb/24/6/24/n14275926.md
@@ -7,13 +7,13 @@
 </h6>
 <hr>
 	<p>【大纪元2024年06月24日讯】（大纪元记者徐曼沅洛杉矶报导）蚵仔煎口味的洋芋片、阿里山的手洗爱玉籽，要在洛杉矶买到这些地道的“台湾味”并不难；在艾尔蒙地市（El Monte）就有一间华裔移民口耳相传的“台湾Costco”。创办人陈英琴（Jenny Chen），自1993年开业以来将“新台湾食品”从一间“柑仔店”（台语：杂货店），发展为拥有五栋仓库的大型批发、零售企业。</p>
-<figure id="attachment_14276075" aria-describedby="caption-attachment-14276075" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276075-b13903802bbfbddf0f9a3facd9569ae9.jpg"><img class="size-large wp-image-14276075" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276075-b13903802bbfbddf0f9a3facd9569ae9-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276075" class="wp-caption-text">2024年3月2日，陈英琴（右四）参与金冠奖记者会。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14276075" aria-describedby="caption-attachment-14276075" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276075-b13903802bbfbddf0f9a3facd9569ae9.jpg"><img decoding="async" class="size-large wp-image-14276075" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276075-b13903802bbfbddf0f9a3facd9569ae9-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276075" class="wp-caption-text">2024年3月2日，陈英琴（右四）参与金冠奖记者会。（徐曼沅／大纪元）</figcaption></figure>
 <h2>从“柑仔店”到台湾Costco</h2>
 <p>荣获2024年金冠奖的陈英琴，早年在圣盖博市的山谷大道（Valley Blvd）上开设小杂货店；店里麻雀虽小、五脏俱全，各式台湾商品齐全。她回忆创业初期，虽然就是开了一家小“柑仔店”，但因贩售各种特殊的台湾食品，很快获得消费者青睐。随着生意兴隆，“新台湾食品”也招致一些纠纷。当时商店坐落于现今的希尔顿饭店（Hilton Hotel）附近，由于停车空间有限，有时会收到邻近居民投诉，表示顾客车辆影响当地生活。</p>
 <p>为了扩大发展、解决投诉和仓储空间不足等问题，陈英琴毅然决然迁址，将店铺从车水马龙的闹区，搬到当时华裔人口相对稀少，且较为偏僻的艾尔蒙地。她表示，一开始也会担心生意下滑，但很感谢老顾客们不离不弃，不少消费者仍跑到艾尔蒙地采购。有些餐厅业者后来和陈英琴合作了二十多年，建立了良好的友谊。</p>
-<figure id="attachment_14276087" aria-describedby="caption-attachment-14276087" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276087-b77b40443dde5097e11401c8fe2c9a6f.jpg"><img class="size-large wp-image-14276087" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276087-b77b40443dde5097e11401c8fe2c9a6f-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276087" class="wp-caption-text">2024年6月21日，除了各种食品，新台湾食品也贩售各式餐厅需要的商品。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14276087" aria-describedby="caption-attachment-14276087" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276087-b77b40443dde5097e11401c8fe2c9a6f.jpg"><img decoding="async" class="size-large wp-image-14276087" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276087-b77b40443dde5097e11401c8fe2c9a6f-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276087" class="wp-caption-text">2024年6月21日，除了各种食品，新台湾食品也贩售各式餐厅需要的商品。（徐曼沅／大纪元）</figcaption></figure>
 <p>“新台湾”前台经理Evie回忆道：“搬迁初期，这里环境相当荒凉。我们选择中间的一栋仓库作为起点，有时候整天都看不到几辆车经过。”搬迁后的头一两年是商店最艰难的时期，“新台湾”除了挑选更好的产品贩售，也透过投放广告、请老顾客介绍新客户等方式营销。因为物美价廉，该公司业务逐步增长，先后租下了第二栋、第三栋仓库，如今已拥有五栋仓库，成为一家大型批发零售企业。</p>
-<figure id="attachment_14276090" aria-describedby="caption-attachment-14276090" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276090-8380bc25c75045c3c35668abc1e19c2a.jpg"><img class="size-large wp-image-14276090" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276090-8380bc25c75045c3c35668abc1e19c2a-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276090" class="wp-caption-text">2024年6月21日，新台湾食品从小杂货店发展为拥有五栋仓库的大型批发零售企业。（徐曼沅／大纪元）</figcaption></figure>
+<figure id="attachment_14276090" aria-describedby="caption-attachment-14276090" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14276090-8380bc25c75045c3c35668abc1e19c2a.jpg"><img decoding="async" class="size-large wp-image-14276090" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276090-8380bc25c75045c3c35668abc1e19c2a-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-14276090" class="wp-caption-text">2024年6月21日，新台湾食品从小杂货店发展为拥有五栋仓库的大型批发零售企业。（徐曼沅／大纪元）</figcaption></figure>
 <h2>多元化的产品与顾客群</h2>
 <p>“新台湾”的特色在于多元化的进口产品，尤其是台湾特色备受消费者客喜爱。Evie说：“很多产品一上架，就被抢购一空。”由于食品具保质期限，加上运输、通关等的不确定性，供应链管理是公司最头疼的挑战。</p>
 <p>疫情期间零售客源占比从原来的30%上升至45%，甚至将近50%；而餐馆客源则从70%降至55%左右。客户结构的变化，也让“新台湾食品”开始调整选货与进货种类。Evie表示，不少消费者一开始都以为“新台湾”是批发商，每次得买很大的份量；但事实上店内也有零售商品，且无须付会员费。疫情期间，很多小家庭到店里采购，口耳相传下又开辟了餐厅之外的新顾客群。</p>
@@ -29,28 +29,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266393.md#1">永信制药质量女总监：毕业生可工作后再进修</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/12/n11252250.md#1" target="_blank">大陆公安 从参与迫害到修炼法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272724.md#1">为何说夏至一阴生？天道地道示常道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275335.md#1">【马克时空】094台海上浮 中美俄核潜艇谁更强</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232457.md#1">【佳人传】与丈夫郝懿行齐名的校书女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275144.md#1">【远见快评】中共司法新规 以暴力恐怖促台分裂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275427.md#1">又有4名中国理工科学生赴美遭遣返</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275401.md#1">中国游客无法回到全球旅游市场 原因有三</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14275047.md#1">《下一站爱情》暑期档惨败 首日票房仅121元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275403.md#1">章子怡携4岁儿参加戏剧节 孙红雷论辈分引爆笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274988.md#1">萧敬腾确诊感染病毒 取消珠海2场音乐剧演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275425.md#1">周星驰62岁生日 获林允搜集9张帅照祝福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14275023.md#1">歌手薛之谦露天体育场开唱 巧遇徐州人工降雨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274689.md#1">专家：有人用内疚来操纵你的3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275601.md#1">为什么很多航空公司禁止飞行员留胡须？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260488.md#1">改掉这个习惯有助防胃癌 还能延年益寿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268247.md#1">中医师回答你为什么食物分寒热</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274154.md#1">发酵米水制作简单 对肠道有意想不到的好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/24/n14275926.htm">金冠奖得主陈英琴谈“新台湾食品”创业　</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275926.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
