--- a/gb/24/6/13/n14269429.md
+++ b/gb/24/6/13/n14269429.md
@@ -7,50 +7,50 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月13日讯】（大纪元记者徐乃义台湾桃园报导）根据卫福部2024年推估，台湾护理人力缺口达2.4万人。长庚科技大学为缓解日益严峻的护理师人才荒的问题，继与国合会、华盛顿大学签属MOU之后，再度与耕莘健康管理专科学校签订MOU。长庚科大校长范君瑜与耕莘专校校长陈友伦于典礼活动上一同签下合作备忘录，正式确立两校伙伴关系，并承诺两校将共享学习成效分析成果，推动校务研究，以强化护理专业教育，携手培育护理精英人才作为合作目标。</p>
-<figure id="14269431" aria-describedby="caption-14269431" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269431-688508-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14269431-688508-450x300.jpg" alt="长庚科大校长范君瑜（右）与耕莘专校校长陈友伦（左）签订MOU。" width="500" /></a><figcaption id="caption-14269431" class="wp-caption-text">长庚科大校长范君瑜（右）与耕莘专校校长陈友伦（左）签订MOU。（长庚科大提供）</figcaption></figure>
+<figure id="14269431" aria-describedby="caption-14269431" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269431-688508-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14269431-688508-450x300.jpg" alt="长庚科大校长范君瑜（右）与耕莘专校校长陈友伦（左）签订MOU。" width="500" /></a><figcaption id="caption-14269431" class="wp-caption-text">长庚科大校长范君瑜（右）与耕莘专校校长陈友伦（左）签订MOU。（长庚科大提供）</figcaption></figure>
 <p>长庚科技大学校长范君瑜提到，耕莘专校是学校建立二技学制以来，最重要的生源学校之一，且两校同为台湾护理人才的摇篮，早在医疗领域中有过许多友善交流，之间的情谊早已不言而喻。</p>
-<figure id="14269432" aria-describedby="caption-14269432" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269432-688509-450x247.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14269432-688509-450x247.jpg" alt="长庚科大与耕莘专校的师长们进行友善交流。" width="500" /></a><figcaption id="caption-14269432" class="wp-caption-text">长庚科大与耕莘专校的师长们进行友善交流。（长庚科大提供）</figcaption></figure>
+<figure id="14269432" aria-describedby="caption-14269432" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269432-688509-450x247.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14269432-688509-450x247.jpg" alt="长庚科大与耕莘专校的师长们进行友善交流。" width="500" /></a><figcaption id="caption-14269432" class="wp-caption-text">长庚科大与耕莘专校的师长们进行友善交流。（长庚科大提供）</figcaption></figure>
 <p>耕莘健康管理专科学校校长陈友伦也说到，长庚科大优质的办学能力，一直来均为校内学生升学的首要目标，尤其长庚科大为企业办学，其丰富的教学资源，连国立大学都十分羡慕。</p>
-<figure id="14269433" aria-describedby="caption-14269433" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269433-688510-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14269433-688510-450x300.jpg" alt="长庚科大校务研究中心林主任演示以AI撰写而成的课程查询系统。" width="500" /></a><figcaption id="caption-14269433" class="wp-caption-text">长庚科大校务研究中心林主任演示以AI撰写而成的课程查询系统。（长庚科大提供）</figcaption></figure>
+<figure id="14269433" aria-describedby="caption-14269433" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14269433-688510-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14269433-688510-450x300.jpg" alt="长庚科大校务研究中心林主任演示以AI撰写而成的课程查询系统。" width="500" /></a><figcaption id="caption-14269433" class="wp-caption-text">长庚科大校务研究中心林主任演示以AI撰写而成的课程查询系统。（长庚科大提供）</figcaption></figure>
 <p>长庚科大校务研究中心主任林鸿铭为活动开场，并对现场贵宾展示了以AI撰写而成的课程查询系统。林主任说道，两校合作关系的建立，将成为护理教育的一大助力。</p>
 <p>今日进入AI的时代，我们将致力于导入人工智慧来辅佐教育与校务发展，透过AI分析教学成效，两校将能够更好地了解学生的学习需求，提升教学竞争力。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/3/n13941989.md#1">长庚科大与台大共同推动AI 科技与健康照护</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/24/n14123229.md#1">长庚科大岁末感恩 范君瑜校长勉航向一流大学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269417.md#1">加强员工与消防人员化学灾害抢救 桃消训练多元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269424.md#1">到桃市图解锁任务 逾期点数全归零</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268861.md#1">桃园2.5亿整修桃园巨蛋 打造重要体育设施汇集点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268789.md#1">一球入口即颠覆口感层次 “雪点曲奇球”重磅登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268830.md#1">快艇闯淡水河事件 桃园市议员凌涛提两大隐忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268825.md#1">观音SRF案 民进党团：桃园市府打假球真放水</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268808.md#1">桃园及新竹供水维持稳定 2024年1期稻作顺利供灌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268783.md#1">餐旅实习真辛苦 醒吾薪火相传业界的最爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307201.md#1">观音区第一座纳骨塔开工 便利就近追思已故亲友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307164.md#1">中原大学荣获台湾永续行动奖1金2铜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307173.md#1">营养师高敏敏捐款助创世 植物人的“膳”心大使</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307143.md#1">88节义剪送爱 打造元气新造型重拾自信好心情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307122.md#1">金马影后陈淑芳等共同捐赠桃园辅具及防诈宣导</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307114.md#1">奥运麟洋配荣获金牌 桃园市图办奥运主题书展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307043.md#1">健行科大产学人才训练联盟 培养新世代车艺职人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307109.md#1">培养六角形人才 元智开办挑战极限英语营</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/9/n9823637.md#1" target="_blank">苦胆：“十月革命一声炮响”放的是空炮</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265705.md#1">【未解之谜】阿南德最新预言：相同天象再现 人间将有异动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/8/n14266607.md#1">端午节吃粽子起源不因纪念屈原？一起来揭谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263161.md#1">【古道人生】媳妇煮蚯蚓给眼盲婆婆吃 即时招来天谴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269343.md#1">【远见快评】“义和团”加速质变 中共恐慌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269104.md#1">【新闻大破解】拜登唱衰中国经济 G7随美制裁？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268667.md#1">【新闻看点】吉林凶嫌伤美国教师案 诸多疑点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14267991.md#1">四川成都凌晨发生巨响 民众被惊醒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267898.md#1">四美国教师在吉林公园遇刺 国会议员关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268570.md#1">美籍讲师讲述吉林公园遇刺事件经过</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267839.md#1">曾遭中共打压 台湾佳丽高曼容摘世界选美后冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268574.md#1">胡歌睽违6年低调访台 活动资讯曝光引瞩目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268629.md#1">《九龙城寨》香港票房破亿 有望打破影史纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267926.md#1">汤唯自曝最常用韩语 放闪导演丈夫一脸害羞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267501.md#1">涉《大象席地而坐》导演胡波之死 王小帅否认</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266367.md#1">南瓜遇见地瓜 创意素食甜点汤品太好吃了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750290.md#1">注意五个吃粽小技巧 窈窕过端午</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268268.md#1">这个工作习惯会让你看似“无能” 赶快改正</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268931.md#1">如何让蔬果存放久一点？ 专家教你几招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/16/n14251692.md#1">爸妈别乱发脾气 珍贵的亲子关系重在“信任”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/13/n14269429.htm">长庚科大吁应活用AI 携手耕莘护专共育护理人才</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269429.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
