--- a/gb/24/6/25/n14276816.md
+++ b/gb/24/6/25/n14276816.md
@@ -8,10 +8,10 @@
 <hr>
 <p>【大纪元2024年06月25日讯】（大纪元记者徐乃义台湾桃园报导）英国《泰晤士高等教育》（THE）于六月份连续发布了2024年世界大学排名与世界大学影响力排名。世界大学排名系以各大学校院的教学、研究、论文引用、国际化程度、产业收入等五大面向表现进行综合评比。世界大学影响力排名则是以联合国“永续发展（SDGs）”17项指标，以该学校成绩最好的3项指标与SDG17“目标实现与伙伴关系”来进行评比。</p>
 <p>本次的排名，世界大学排名台湾共有47所大学校院入榜，较去年45校增长了2所学校；世界大学影响力排名则维持51所大学校院入围榜单。长庚科技大学今年再度蝉联世界排名榜单，夺得世界大学排名全国第21名，私立科大全国第二名；以及世界大学影响力“SDG3(健康福祉)”单项成绩全国第16名，同为私立科大全国第二名，世界排名第401–600名的成绩入榜。</p>
-<figure id="14276818" aria-describedby="caption-14276818" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276818-690949-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14276818-690949-450x300.jpg" alt="“2024世界大学影响力排名”长庚科大获“SDG3(健康福祉)”单项排名全国第16名，私立科大第二名。" width="500" /></a><figcaption id="caption-14276818" class="wp-caption-text">“2024世界大学影响力排名”长庚科大获“SDG3(健康福祉)”单项排名全国第16名，私立科大第二名。（长庚科大提供）</figcaption></figure>
-<figure id="14276819" aria-describedby="caption-14276819" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276819-690950-450x270.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14276819-690950-450x270.jpg" alt="长庚科大与台大进行跨界合作，推动AI科技长照。" width="500" /></a><figcaption id="caption-14276819" class="wp-caption-text">长庚科大与台大进行跨界合作，推动AI科技长照。（长庚科大提供）</figcaption></figure>
+<figure id="14276818" aria-describedby="caption-14276818" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276818-690949-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276818-690949-450x300.jpg" alt="“2024世界大学影响力排名”长庚科大获“SDG3(健康福祉)”单项排名全国第16名，私立科大第二名。" width="500" /></a><figcaption id="caption-14276818" class="wp-caption-text">“2024世界大学影响力排名”长庚科大获“SDG3(健康福祉)”单项排名全国第16名，私立科大第二名。（长庚科大提供）</figcaption></figure>
+<figure id="14276819" aria-describedby="caption-14276819" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276819-690950-450x270.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276819-690950-450x270.jpg" alt="长庚科大与台大进行跨界合作，推动AI科技长照。" width="500" /></a><figcaption id="caption-14276819" class="wp-caption-text">长庚科大与台大进行跨界合作，推动AI科技长照。（长庚科大提供）</figcaption></figure>
 <p>长庚科技大学的范君瑜校长表示，学校能再次入围世界排名的背后，凝聚了学校全体师生的努力，以及董事会、产业界的大力支持。在全球化与永续发展的时代潮流下，校务发展需积极响应联合国永续发展目标，并加强AI科技的运用教学，以提升学校及师生的竞争力。</p>
-<figure id="14276820" aria-describedby="caption-14276820" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276820-690951-450x345.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14276820-690951-450x345.jpg" alt="长庚科大校务发展主轴以培养健康照护人才为目标。" width="500" /></a><figcaption id="caption-14276820" class="wp-caption-text">长庚科大校务发展主轴以培养健康照护人才为目标。（长庚科大提供）</figcaption></figure>
+<figure id="14276820" aria-describedby="caption-14276820" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14276820-690951-450x345.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276820-690951-450x345.jpg" alt="长庚科大校务发展主轴以培养健康照护人才为目标。" width="500" /></a><figcaption id="caption-14276820" class="wp-caption-text">长庚科大校务发展主轴以培养健康照护人才为目标。（长庚科大提供）</figcaption></figure>
 <p>尤其长庚科大的发展主轴以培养健康照护人才为目标，更需要透过研究与深耕地方，来扩展教育对社会的影响力。范校长也提到，未来长庚科大将继续推进教育创新，拓展国际交流与合作，深化与产业界的连结，培养更多具有全球竞争力的高阶医护人才。◇<br />
 责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
@@ -22,34 +22,34 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/30/n13894900.md#1">长庚科大 全台私立大学注册率第1名</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/27/n14023320.md#1">2023亚洲最佳大学    长庚科大私立科大第一</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/6/n14174671.md#1">长庚科大范君瑜校长 获台湾护理学会副理事长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276810.md#1">桃园市社区营造获文化部评核特优</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276805.md#1">石绵建材废弃物免费清运服务剩余额度有限</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276422.md#1">传统好滋味“总铺师办桌”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307855.md#1">长庚科大获三奖肯定 蝉联台湾永续行动奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307201.md#1">观音区第一座纳骨塔开工 便利就近追思已故亲友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307164.md#1">中原大学荣获台湾永续行动奖1金2铜</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/15/n9959300.md#1" target="_blank">文革中自杀的几个名人（4）史学家翦伯赞</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272724.md#1">为何说夏至一阴生？天道地道示常道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272545.md#1">英女自称年幼时濒死 与外星人交换灵魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232457.md#1">【古韵流芳】与丈夫郝懿行齐名的校书女</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275144.md#1">【远见快评】中共司法新规 以暴力恐怖促台分裂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275135.md#1">【秦鹏观察】美国债会崩溃？中共停购黄金之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275445.md#1">沈舟：美军第五代战机齐出 亮优势军力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275270.md#1">真没钱了？中共再提要军队“过紧日子”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275724.md#1">马斯克重登世界首富 黄仁勋身价飙升</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275403.md#1">章子怡携4岁儿参加戏剧节 孙红雷论辈分引爆笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275425.md#1">周星驰62岁生日 获林允搜集9张帅照祝福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275486.md#1">林志玲北海道开球漂亮登场 扎俐落马尾双语问候</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276013.md#1">崔智友婚后曾与丈夫争执 曝育儿教育观差异</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275576.md#1">赖铭伟首个唱获温岚助阵 忆癌逝女友落男儿泪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/23/n14275601.md#1">为什么很多航空公司禁止飞行员留胡须？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276159.md#1">飞机乘客登机时 空服员有哪些事要做？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275342.md#1">【梁厨美食】咖喱南瓜虾肉丸～超级下饭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274154.md#1">发酵米水制作简单 对肠道有意想不到的好处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274108.md#1">告别身材焦虑！7款低热量零食一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/25/n14276816.htm">长庚科大蝉联泰晤士2024世界大学与影响力排名</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276816.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
